Overflow fix?

--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,8 @@ html {
     overflow-x: hidden;
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 body {
@@ -12,6 +14,8 @@ body {
     height: 100%;
     margin: 0;
     color: white;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 img {
